Updates license to MIT

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description: Alpha is a starter theme for WordPress v4.4.
 Author: Zach Hornsby
 Author URI: http://zachhornsby.com
 Version: 1.0
-License: GNU General Public License v2.0
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+License: MIT License
+License URI: https://opensource.org/licenses/MIT
 */
 
