--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html /* html element 62.5% font-size for REM use */ {
 
 body {
 	fontfont-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-weight:300px;
+	font-weight:300;
 	font-size:16px;
 	line-height:1.4em;
 	color:#444;
