Updates theme URL

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*   
 Theme Name: Alpha
-Theme URI: http://zachhornsby.com/alpha/
-Description: Alpha is a starter theme for WordPress v4.4.
+Theme URI: https://github.com/zachhornsby/Alpha
+Description: Alpha is a starter theme for WordPress v4.0+.
 Author: Zach Hornsby
 Author URI: http://zachhornsby.com
 Version: 1.0
